# secrets-service

./: Cargo.toml  flake.nix  readme.md  secretsctl.sh
src/: crypto.rs  error.rs  main.rs  protocol.rs  service.rs  store.rs
